welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: not found: value Tlength
	setCouleurBrosse(T((Tlength+decalage)%T.length))
                            ^